# kcalc

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build.sh  run-client-docker.sh  run-client.sh  run-docker-ws.sh  run-docker.sh  run-examples.sh  run-server-docker.sh  run-server.sh  run-ws.sh  run.sh  test-server.sh  test-ws.sh  test.sh
apps/: CMakeLists.txt  main.cpp
kcalc-client/: Dockerfile  kcalc_client.py
kcalc-server/: Dockerfile
kcalc-server/kcalc/: calculator.py  test_calculator.py
libs/core/: CMakeLists.txt
libs/core/include/: kcalc.hpp
libs/core/source/: kcalc.cpp
libs/core/tests/: CMakeLists.txt  test-kcalc-core.cpp
resources/: infix-example-1.txt  infix-examples.txt  prefix-example-1.txt  prefix-examples.txt
tests/: CMakeLists.txt  test-kcalc.cpp  test-kcalc.sh
web-client/: kcalc_client.py
web-service/kcalc/: app.py  test_app.py
